<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="228dp"
        android:icon="@drawable/ic_user"
        android:drawableTop="@drawable/ic_user"/>

    <Button
        android:id="@+id/takeImageBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/add_picture" />

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:maxLength="40" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="432dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <EditText
        android:id="@+id/priceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price_hint"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <Button
        android:id="@+id/addItemBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_item" />

</LinearLayout>